# plotly_presentation

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: notebook_checks.yml  pr_checks.yaml  pr_checks.yml
examples/: callouts.ipynb  cltv_plots.ipynb  colors.ipynb  examples.ipynb  food_plots.ipynb  wealth_plots.ipynb
examples/_data/: DK wealth.csv
plotly_presentation/: __init__.py  examples.py  plotter.py
plotly_presentation/_core/: analysis.py  callouts.py  colors.py  comparison.py  options.py  plotter.py  style.py
plotly_presentation/_core/_defaults/: callout_settings_config.yaml  colors_config.yaml  layout_config.yaml
plotly_presentation/_core/analysis_helper/: comparison.py  price_volume.py  price_volume_mix.py  utils.py
plotly_presentation/_core/analysis_helper/comparison/: comparison.py
plotly_presentation/_core/colors/: __init__.py  _colors.py  diverging.py  sequential.py  utils.py
plotly_presentation/_core/utils/: color_helper.py  dict_funcs.py  root_searcher.py
plotly_presentation/examples/: callouts.ipynb
tests/: test_style.py
tests/_core/: plotter.py  test_analysis.py  test_callouts.py  test_colors.py  test_comparison.py  test_plotter.py  test_style.py
tests/_core/analysis/: test_price_volume.py  test_price_volume_mix.py
tests/_core/analysis_helper/: test_comparison.py  test_price_volume.py
tests/_core/analysis_helper/change/: test_price_volume.py  test_price_volume_mix.py
tests/_core/colors/: test_diverging.py
tests/_core/utils/: test_dict_funcs.py
tests/colors/: test_colors.py  test_diverging.py  test_sequential.py  test_utils.py
